--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700"
       rel="stylesheet"
     />
+    <link
+      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      rel="stylesheet"
+    />
     <title>Welcome to LegalConsulting</title>
   </head>
   <body>
