take the case button

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,10 +25,13 @@
       href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
     />
-    <title>Welcome to LegalConsulting</title>
+    <title>Welcome to LexiConsultas</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >LexiConsultas works with JavaScript. You need to enable JavaScript to run
+      this app.</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
